--- a/authorization-server/src/main/resources/static/login.html
+++ b/authorization-server/src/main/resources/static/login.html
@@ -21,13 +21,13 @@
         <div class="form__content">
             <h1>Authorization</h1>
             <div class="styled-input">
-                <input type="text" class="styled-input__input" name="username">
+                <input type="text" class="styled-input__input" name="username" value="killer">
                 <div class="styled-input__placeholder"><span class="styled-input__placeholder-text">Username</span>
                 </div>
                 <div class="styled-input__circle"></div>
             </div>
             <div class="styled-input">
-                <input type="text" class="styled-input__input" name="password">
+                <input type="password" class="styled-input__input" name="password" value="wqsqzj">
                 <div class="styled-input__placeholder"><span class="styled-input__placeholder-text">Password</span>
                 </div>
                 <div class="styled-input__circle"></div>
