--- a/client-server/src/main/resources/static/api.html
+++ b/client-server/src/main/resources/static/api.html
@@ -10,7 +10,7 @@
 </head>
 <body style="padding: 10px">
     <a class="btn btn-success authcode" href="http://client-server:8002/api/say/ac">my auth-server 授权</a>
-    <a class="btn btn-warning implicit" href="http://client-server:8002/api/say/xxxx">anthor auth-server 授权</a>
+    <a class="btn btn-warning implicit" href="http://client-server:8002/api/say/im">anthor auth-server 授权</a>
 </body>
 
 </html>
