update keycloak server

--- a/client-server-sso-1/src/main/resources/static/index.html
+++ b/client-server-sso-1/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     </header>
 </body>
 <script>
-    // 请求用户信息
-    $.get("",)
+    // 请求用户信息， 服务器端认证 重定向到授权服务器，服务器给与token到cookie中
+    $.get("", )
 </script>
 </html>
